examples/failing/LeadingZeros1.purs
module Main where

x = 01